--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         <td>March 30</td>
         <td>First section completed, moving on to second</td>
       </tr>
+      <tr>
+        <td>March 31</td>
+        <td>Second section completed, moving on to third</td>
+      </tr>
     </table>
     <hr size="3" noshade>
     <h3>Skills</h3>
