--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
       </tfoot>
       <tr>
         <td>March 30</td>
-        <td>First section completed, moving on to second</td>
+        <td>Second section completed, moving on to third</td>
       </tr>
       <tr>
         <td>March 31</td>
-        <td>Second section completed, moving on to third</td>
+        <td>Third section completed, moving on to fourth</td>
       </tr>
     </table>
     <hr size="3" noshade>
