--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <li>Forest Hill Elementary School</li>
     </ul>
     <hr size="3" noshade>
-    <h3>Experience In Web-Develeopment</h3>
+    <h3>Progress in The Complete 2022 Web Development Bootcamp</h3>
     <table border="3">
       <thead>
         <tr>
@@ -48,12 +48,20 @@
 
       </tfoot>
       <tr>
-        <td>March 30</td>
+        <td>March 30, 2022</td>
         <td>Second section completed, moving on to third</td>
       </tr>
       <tr>
-        <td>March 31</td>
+        <td>March 31, 2022</td>
         <td>Third section completed, moving on to fourth</td>
+      </tr>
+      <tr>
+        <td>April 1st</td>
+        <td>Started fourth section</td>
+      </tr>
+      <tr>
+        <td>April 2nd</td>
+        <td>Fourth section completed, moving on to fifth</td>
       </tr>
     </table>
     <hr size="3" noshade>
