--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
         <td>April 2nd</td>
         <td>Fourth section completed, moving on to fifth</td>
       </tr>
+      <tr>
+        <td>April 3rd</td>
+        <td>Started 5th section</td>
+      </tr>
+      <tr>
+        <td>April 4th</td>
+        <td>Continuing 5th section</td>
+      </tr>
     </table>
     <hr size="3" noshade>
     <h3>Skills</h3>
